# crewai-experiments

./: .env.example  .plugin-versions  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  setup.sh
aicrew/core/: errors.py  models.py  ui.py
aicrew/core/agents/: research.py
aicrew/core/tasks/: research.py
aicrew/core/tools/: browser_tools.py  search_tools.py  task_output.py
aicrew/projects/finance/: team.py
aicrew/projects/finance/agents/: __init__.py  financial_analyst.py  investment_advisor.py  research_analyst.py
aicrew/projects/finance/tasks/: __init__.py  core.py  filings_analysis.py  financial_analysis.py  recommend.py  research.py
aicrew/projects/finance/tools/: sec_tools.py
aicrew/projects/gamedev/: team.py
aicrew/projects/gamedev/agents/: __init__.py  chief_qa_engineer.py  qa_engineer.py  senior_engineer.py
aicrew/projects/gamedev/tasks/: __init__.py  story_review_code.py  tech_review_code.py  write_code.py
aicrew/projects/ideawriter/: team.py
aicrew/projects/screenplay/: team.py
aicrew/projects/screenplay/agents/: __init__.py  analyst.py  formatter.py  scorer.py  scriptwriter.py  spamfilter.py
aicrew/projects/screenplay/tasks/: __init__.py  analyse_discussion.py  create_dialogue.py  format_script.py  read_newsgroup_post.py  score_dialouge.py
aicrew/projects/societyofminds/: mind.py  team.py
aicrew/specs/: __init__.py  capital-punishment-discussion.txt  game-idea.txt  shooter_game_spec.txt
vectorstore/: .gitignore
